--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mail</artifactId>
+    <artifactId>templates</artifactId>
     <groupId>com.zandero</groupId>
-    <version>1.0</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <name>Zandero</name>
-    <description>mail and template utilities</description>
+    <description>template utilities</description>
     <url>http://www.zandero.com</url>
     <inceptionYear>2017</inceptionYear>
 
@@ -24,8 +24,8 @@
 
     <scm>
         <url>https://github.com/Zandero/mail</url>
-        <connection>scm:git:git://github.com/Zandero/mail.git</connection>
-        <developerConnection>scm:git:git@github.com/Zandero/mail.git</developerConnection>
+        <connection>scm:git:git://github.com/Zandero/templates.git</connection>
+        <developerConnection>scm:git:git@github.com/Zandero/templates.git</developerConnection>
     </scm>
 
     <developers>
@@ -46,7 +46,7 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 
-        <version.zandero.utils>[1.1,)</version.zandero.utils>
+        <version.zandero.utils>[1.2,)</version.zandero.utils>
         <version.mustache>[0.9.4,)</version.mustache>
 
         <version.logback>[1.1.7,)</version.logback>
@@ -65,6 +65,12 @@
         <dependency>
             <groupId>com.zandero</groupId>
             <artifactId>utils</artifactId>
+            <version>${version.zandero.utils}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zandero</groupId>
+            <artifactId>utils.extra</artifactId>
             <version>${version.zandero.utils}</version>
         </dependency>
 
