--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>templates</artifactId>
     <groupId>com.zandero</groupId>
-    <version>1.2</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>Zandero</name>
@@ -58,6 +58,7 @@
         <version.junit>[4.12,)</version.junit>
         <version.mockito-all>[1.10.19,)</version.mockito-all>
 
+        <version.zandero.junit>[0.2,)</version.zandero.junit>
     </properties>
 
     <dependencies>
@@ -96,9 +97,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.trajano.commons</groupId>
-            <artifactId>commons-testing</artifactId>
-            <version>${version.trajano}</version>
+            <groupId>com.zandero</groupId>
+            <artifactId>utils.junit</artifactId>
+            <version>${version.zandero.junit}</version>
             <scope>test</scope>
         </dependency>
 
