--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>templates</artifactId>
     <groupId>com.zandero</groupId>
-    <version>1.3</version>
+    <version>1.3.1</version>
     <packaging>jar</packaging>
 
     <name>Zandero</name>
@@ -49,7 +49,7 @@
         <version.zandero.utils>[1.2,)</version.zandero.utils>
         <version.mustache>[0.9.4,)</version.mustache>
 
-        <version.logback>[1.1.7,)</version.logback>
+        <version.slf4j-api>1.8.0-beta2</version.slf4j-api>
 
         <version.java.mail>[1.5.0-b01,)</version.java.mail>
         <version.java.mail.api>[1.5.5,)</version.java.mail.api>
@@ -57,8 +57,8 @@
         <version.trajano>[2.1.0,)</version.trajano>
         <version.junit>[4.12,)</version.junit>
         <version.mockito-all>[1.10.19,)</version.mockito-all>
-
         <version.zandero.junit>[0.2,)</version.zandero.junit>
+        <version.logback>[1.1.7,)</version.logback>
     </properties>
 
     <dependencies>
@@ -76,9 +76,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${version.logback}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${version.slf4j-api}</version>
         </dependency>
 
         <!-- Mustache templates -->
@@ -89,6 +89,13 @@
         </dependency>
 
         <!--Testing stuff bellow-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${version.logback}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
