--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>templates</artifactId>
     <groupId>com.zandero</groupId>
-    <version>1.3.2</version>
+    <version>1.3.3</version>
     <packaging>jar</packaging>
 
     <name>Zandero</name>
@@ -24,7 +24,7 @@
 
     <scm>
         <url>https://github.com/Zandero/mail</url>
-        <connection>scm:git:git://github.com/Zandero/templates.git</connection>
+        <connection>scm:git:git://github.com/Zandero/templatemvs.git</connection>
         <developerConnection>scm:git:git@github.com/Zandero/templates.git</developerConnection>
     </scm>
 
@@ -47,6 +47,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 
         <version.zandero.utils>[1.2,)</version.zandero.utils>
+        <version.zandero.utils.extra>[1.4.2,)</version.zandero.utils.extra>
         <version.mustache>[0.9.10,)</version.mustache>
 
         <version.slf4j-api>1.8.0-beta4</version.slf4j-api>
