--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>templates</artifactId>
     <groupId>com.zandero</groupId>
-    <version>1.3.3</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <name>Zandero</name>
@@ -37,8 +37,8 @@
     </developers>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <project.encoding>UTF-8</project.encoding>
         <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
@@ -47,19 +47,12 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 
         <version.zandero.utils>[1.2,)</version.zandero.utils>
-        <version.zandero.utils.extra>[1.4.2,)</version.zandero.utils.extra>
+        <version.zandero.utils.extra>[1.5,)</version.zandero.utils.extra>
         <version.mustache>[0.9.10,)</version.mustache>
 
-        <version.slf4j-api>1.8.0-beta4</version.slf4j-api>
-
-        <version.java.mail>[1.5.0-b01,)</version.java.mail>
-        <version.java.mail.api>[1.5.5,)</version.java.mail.api>
-
-        <version.trajano>[2.1.0,)</version.trajano>
-        <version.junit>[4.12,)</version.junit>
+        <version.junit>[5.1,)</version.junit>
         <version.mockito-all>[1.10.19,)</version.mockito-all>
-        <version.zandero.junit>[0.2,)</version.zandero.junit>
-        <version.logback>[1.1.7,)</version.logback>
+        <version.zandero.junit>[1.0,)</version.zandero.junit>
     </properties>
 
     <dependencies>
@@ -76,12 +69,6 @@
             <version>${version.zandero.utils}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${version.slf4j-api}</version>
-        </dependency>
-
         <!-- Mustache templates -->
         <dependency>
             <groupId>com.github.spullara.mustache.java</groupId>
@@ -91,15 +78,8 @@
 
         <!--Testing stuff bellow-->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${version.logback}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
@@ -141,17 +121,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.6</version>
+                <version>1.6.12</version>
                 <extensions>true</extensions>
                 <configuration>
                     <!-- for production deployment -->
@@ -167,7 +147,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -193,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
